Changes Requests to use HttpClient instead of BufferedStreams