@@ -1,21 +1,25 @@
 package ca.darrensjones.jonesbot.utilities;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+
+import org.apache.commons.io.IOUtils;
+import org.apache.http.HttpEntity;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
 
 /**
  * @author Darren Jones
- * @version 1.0.0 2020-11-24
+ * @version 1.0.0 2020-11-26
  * @since 1.0.0 2020-11-24
  */
 public class RequestUtils {
 
 	public static String getResponseBody(String requestUrl) throws Exception {
-		String responseBody = "", line = "";
-		BufferedReader in = new BufferedReader(new InputStreamReader(new URL(requestUrl).openStream()));
-		while ((line = in.readLine()) != null) responseBody += line;
-		in.close();
-		return responseBody;
+		CloseableHttpClient httpClient = HttpClients.createDefault();
+		HttpGet httpGet = new HttpGet(new URI(requestUrl));
+		HttpEntity httpEntity = httpClient.execute(httpGet).getEntity();
+		return IOUtils.toString(httpEntity.getContent(), StandardCharsets.UTF_8.name());
 	}
 }
